// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderView /> and children Should render 1`] = `
<Adapter>
  <ul
    className="tabsMenu"
  >
    <Connect(Tab)
      active={true}
      flag={true}
      hendlerTab={[Function]}
      itemKey="mainModule"
      key="mainModule"
      sizeTab={160}
    />
  </ul>
  <RightPanel
    onUpdate={[Function]}
  />
</Adapter>
`;

exports[`<HeaderView /> and children Should render 2`] = `
<Adapter>
  <ul
    className="tabsMenu"
  >
    <Connect(Tab)
      active={false}
      flag={true}
      hendlerTab={[Function]}
      itemKey="mainModule1"
      key="mainModule1"
      sizeTab={160}
    />
  </ul>
  <RightPanel
    onUpdate={[Function]}
  />
</Adapter>
`;
